--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
-
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="get">
       <fieldset class="part">
         <legend class="info">
           Personal information
@@ -20,29 +21,44 @@
 
         <label>
           Surname:
-          <input type="text" name="surname">
+          <input
+            type="text"
+            name="surname"
+          >
         </label>
 
         <label class="content">
           Name:
-          <input type="text" name="name">
+          <input
+            type="text"
+            name="name"
+            >
         </label>
 
         <label class="content">
           How old are You?
-          <input type="number" min="10"
+          <input
+            type="number"
+            min="10"
             max="100" value="12"
-            name="age">
+            name="age"
+            >
         </label>
 
         <label class="content">
           Full date of birth:
-          <input type="date" name="birthed">
+          <input
+            type="date"
+            name="birthed"
+            >
         </label>
 
         <label class="content">
           I accept the term of the agreement
-          <input type="checkbox" name="terms">
+          <input
+            type="checkbox"
+            name="terms"
+            >
         </label>
       </fieldset>
 
@@ -53,15 +69,21 @@
 
         <label>
           E-mail:
-          <input type="email" name="email"
+          <input
+            type="email"
+            name="email"
             placeholder="email@example.com"
-            required>
+            required
+            >
         </label>
 
         <label class="content">
           Password:
-          <input type="password" name="password"
-          required >
+          <input
+            type="password"
+            name="password"
+            required
+            >
         </label>
       </fieldset>
 
@@ -72,29 +94,44 @@
 
         <label>
           Do you love cats?
-          <input type="radio" name="cats"
+          <input
+            type="radio"
+            name="cats"
             value="y">
             Yes
-          <input type="radio" name="cats"
-            value="n">
+          <input
+            type="radio"
+            name="cats"
+            value="n"
+            >
             No
         </label>
 
         <label class="content">
           What is your favorite color?
-          <input type="color" name="color">
+          <input
+          type="color"
+          name="color"
+          >
         </label>
 
         <label class="content">
           What time do you go to bed?
-          <input type="time" name="time"
-            min="09:00" max="24:00"
-            placeholder="--:--:--">
+          <input
+            type="time"
+            name="time"
+            min="09:00"
+            max="24:00"
+            placeholder="--:--:--"
+            >
         </label>
 
         <label class="content">
           What are your favorite brend of cars?
-          <select name="cars" multiple>
+          <select
+            name="cars"
+            multiple
+            >
             <option>BMW</option>
             <option>Audi</option>
             <option>Lada</option>
@@ -103,9 +140,12 @@
 
         <label class="content">
           How do you rate our work?
-          <input type="range" min="0"
+          <input
+            type="range"
+            min="0"
             max="100" name="rate"
-            value="0">
+            value="0"
+            >
         </label>
       </fieldset>
 
@@ -116,7 +156,10 @@
 
         <label>
           Comments:
-          <textarea name="comments" autocomplete="off">
+          <textarea
+            name="comments"
+            autocomplete="off"
+            >
           </textarea>
         </label>
 
