fixed troubles with label and point 1

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           Personal information
         </legend>
 
-        <label>
+        <label class="label">
           Surname:
           <input
             type="text"
@@ -47,7 +47,8 @@
           <input
             type="number"
             min="10"
-            max="100" value="12"
+            max="100"
+            value="12"
             name="age"
           >
         </label>
@@ -74,7 +75,7 @@
           Registration
         </legend>
 
-        <label>
+        <label class="label">
           E-mail:
           <input
             type="email"
@@ -99,7 +100,7 @@
           An interesting fact about you!
         </legend>
 
-        <label>
+        <label class="label">
           Do you love cats?
           <input
             type="radio"
@@ -107,6 +108,8 @@
             value="y"
           >
             Yes
+        </label>
+        <label class="label">
           <input
             type="radio"
             name="cats"
@@ -164,7 +167,7 @@
           Additional info:
         </legend>
 
-        <label>
+        <label class="label">
           Comments:
           <textarea
             name="comments"
